# backend/api/game/v1/game.pb.go
@@ -1,0 +1,361 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v7.34.1
+// source: api/game/v1/game.proto
+
+package v1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type StartMatchRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Name          string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *StartMatchRequest) Reset() {
+	*x = StartMatchRequest{}
+	mi := &file_api_game_v1_game_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *StartMatchRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StartMatchRequest) ProtoMessage() {}
+
+func (x *StartMatchRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StartMatchRequest.ProtoReflect.Descriptor instead.
+func (*StartMatchRequest) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *StartMatchRequest) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+type StartMatchReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	MatchID       string                 `protobuf:"bytes,1,opt,name=matchID,proto3" json:"matchID,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *StartMatchReply) Reset() {
+	*x = StartMatchReply{}
+	mi := &file_api_game_v1_game_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *StartMatchReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StartMatchReply) ProtoMessage() {}
+
+func (x *StartMatchReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StartMatchReply.ProtoReflect.Descriptor instead.
+func (*StartMatchReply) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *StartMatchReply) GetMatchID() string {
+	if x != nil {
+		return x.MatchID
+	}
+	return ""
+}
+
+type CancelMatchRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Name          string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CancelMatchRequest) Reset() {
+	*x = CancelMatchRequest{}
+	mi := &file_api_game_v1_game_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CancelMatchRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CancelMatchRequest) ProtoMessage() {}
+
+func (x *CancelMatchRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CancelMatchRequest.ProtoReflect.Descriptor instead.
+func (*CancelMatchRequest) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *CancelMatchRequest) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+type CancelMatchReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CancelMatchReply) Reset() {
+	*x = CancelMatchReply{}
+	mi := &file_api_game_v1_game_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CancelMatchReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CancelMatchReply) ProtoMessage() {}
+
+func (x *CancelMatchReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CancelMatchReply.ProtoReflect.Descriptor instead.
+func (*CancelMatchReply) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{3}
+}
+
+type GetMatchStatusRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Matchid       string                 `protobuf:"bytes,1,opt,name=matchid,proto3" json:"matchid,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetMatchStatusRequest) Reset() {
+	*x = GetMatchStatusRequest{}
+	mi := &file_api_game_v1_game_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetMatchStatusRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetMatchStatusRequest) ProtoMessage() {}
+
+func (x *GetMatchStatusRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetMatchStatusRequest.ProtoReflect.Descriptor instead.
+func (*GetMatchStatusRequest) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetMatchStatusRequest) GetMatchid() string {
+	if x != nil {
+		return x.Matchid
+	}
+	return ""
+}
+
+type GetMatchStatusReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Status        string                 `protobuf:"bytes,1,opt,name=status,proto3" json:"status,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetMatchStatusReply) Reset() {
+	*x = GetMatchStatusReply{}
+	mi := &file_api_game_v1_game_proto_msgTypes[5]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetMatchStatusReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetMatchStatusReply) ProtoMessage() {}
+
+func (x *GetMatchStatusReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_game_v1_game_proto_msgTypes[5]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetMatchStatusReply.ProtoReflect.Descriptor instead.
+func (*GetMatchStatusReply) Descriptor() ([]byte, []int) {
+	return file_api_game_v1_game_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *GetMatchStatusReply) GetStatus() string {
+	if x != nil {
+		return x.Status
+	}
+	return ""
+}
+
+var File_api_game_v1_game_proto protoreflect.FileDescriptor
+
+const file_api_game_v1_game_proto_rawDesc = "" +
+	"\n" +
+	"\x16api/game/v1/game.proto\x12\vapi.game.v1\x1a\x1cgoogle/api/annotations.proto\"'\n" +
+	"\x11StartMatchRequest\x12\x12\n" +
+	"\x04name\x18\x01 \x01(\tR\x04name\"+\n" +
+	"\x0fStartMatchReply\x12\x18\n" +
+	"\amatchID\x18\x01 \x01(\tR\amatchID\"(\n" +
+	"\x12CancelMatchRequest\x12\x12\n" +
+	"\x04name\x18\x01 \x01(\tR\x04name\"\x12\n" +
+	"\x10CancelMatchReply\"1\n" +
+	"\x15GetMatchStatusRequest\x12\x18\n" +
+	"\amatchid\x18\x01 \x01(\tR\amatchid\"-\n" +
+	"\x13GetMatchStatusReply\x12\x16\n" +
+	"\x06status\x18\x01 \x01(\tR\x06status2\xd3\x02\n" +
+	"\x04Game\x12e\n" +
+	"\n" +
+	"StartMatch\x12\x1e.api.game.v1.StartMatchRequest\x1a\x1c.api.game.v1.StartMatchReply\"\x19\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0e/v1/game/start\x12i\n" +
+	"\vCancelMatch\x12\x1f.api.game.v1.CancelMatchRequest\x1a\x1d.api.game.v1.CancelMatchReply\"\x1a\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/game/cancel\x12y\n" +
+	"\x0eGetMatchStatus\x12\".api.game.v1.GetMatchStatusRequest\x1a .api.game.v1.GetMatchStatusReply\"!\x82\xd3\xe4\x93\x02\x1b\x12\x19/v1/game/status/{matchid}BR\n" +
+	"\vapi.game.v1P\x01ZAgithub.com/Dailiduzhou/the-verdict-paradox/backend/api/game/v1;v1b\x06proto3"
+
+var (
+	file_api_game_v1_game_proto_rawDescOnce sync.Once
+	file_api_game_v1_game_proto_rawDescData []byte
+)
+
+func file_api_game_v1_game_proto_rawDescGZIP() []byte {
+	file_api_game_v1_game_proto_rawDescOnce.Do(func() {
+		file_api_game_v1_game_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_game_v1_game_proto_rawDesc), len(file_api_game_v1_game_proto_rawDesc)))
+	})
+	return file_api_game_v1_game_proto_rawDescData
+}
+
+var file_api_game_v1_game_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_game_v1_game_proto_goTypes = []any{
+	(*StartMatchRequest)(nil),     // 0: api.game.v1.StartMatchRequest
+	(*StartMatchReply)(nil),       // 1: api.game.v1.StartMatchReply
+	(*CancelMatchRequest)(nil),    // 2: api.game.v1.CancelMatchRequest
+	(*CancelMatchReply)(nil),      // 3: api.game.v1.CancelMatchReply
+	(*GetMatchStatusRequest)(nil), // 4: api.game.v1.GetMatchStatusRequest
+	(*GetMatchStatusReply)(nil),   // 5: api.game.v1.GetMatchStatusReply
+}
+var file_api_game_v1_game_proto_depIdxs = []int32{
+	0, // 0: api.game.v1.Game.StartMatch:input_type -> api.game.v1.StartMatchRequest
+	2, // 1: api.game.v1.Game.CancelMatch:input_type -> api.game.v1.CancelMatchRequest
+	4, // 2: api.game.v1.Game.GetMatchStatus:input_type -> api.game.v1.GetMatchStatusRequest
+	1, // 3: api.game.v1.Game.StartMatch:output_type -> api.game.v1.StartMatchReply
+	3, // 4: api.game.v1.Game.CancelMatch:output_type -> api.game.v1.CancelMatchReply
+	5, // 5: api.game.v1.Game.GetMatchStatus:output_type -> api.game.v1.GetMatchStatusReply
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_game_v1_game_proto_init() }
+func file_api_game_v1_game_proto_init() {
+	if File_api_game_v1_game_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_game_v1_game_proto_rawDesc), len(file_api_game_v1_game_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   6,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_game_v1_game_proto_goTypes,
+		DependencyIndexes: file_api_game_v1_game_proto_depIdxs,
+		MessageInfos:      file_api_game_v1_game_proto_msgTypes,
+	}.Build()
+	File_api_game_v1_game_proto = out.File
+	file_api_game_v1_game_proto_goTypes = nil
+	file_api_game_v1_game_proto_depIdxs = nil
+}
