# backend/api/game/v1/game_grpc.pb.go
@@ -1,0 +1,197 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             v7.34.1
+// source: api/game/v1/game.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Game_StartMatch_FullMethodName     = "/api.game.v1.Game/StartMatch"
+	Game_CancelMatch_FullMethodName    = "/api.game.v1.Game/CancelMatch"
+	Game_GetMatchStatus_FullMethodName = "/api.game.v1.Game/GetMatchStatus"
+)
+
+// GameClient is the client API for Game service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type GameClient interface {
+	StartMatch(ctx context.Context, in *StartMatchRequest, opts ...grpc.CallOption) (*StartMatchReply, error)
+	CancelMatch(ctx context.Context, in *CancelMatchRequest, opts ...grpc.CallOption) (*CancelMatchReply, error)
+	GetMatchStatus(ctx context.Context, in *GetMatchStatusRequest, opts ...grpc.CallOption) (*GetMatchStatusReply, error)
+}
+
+type gameClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewGameClient(cc grpc.ClientConnInterface) GameClient {
+	return &gameClient{cc}
+}
+
+func (c *gameClient) StartMatch(ctx context.Context, in *StartMatchRequest, opts ...grpc.CallOption) (*StartMatchReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(StartMatchReply)
+	err := c.cc.Invoke(ctx, Game_StartMatch_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *gameClient) CancelMatch(ctx context.Context, in *CancelMatchRequest, opts ...grpc.CallOption) (*CancelMatchReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CancelMatchReply)
+	err := c.cc.Invoke(ctx, Game_CancelMatch_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *gameClient) GetMatchStatus(ctx context.Context, in *GetMatchStatusRequest, opts ...grpc.CallOption) (*GetMatchStatusReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetMatchStatusReply)
+	err := c.cc.Invoke(ctx, Game_GetMatchStatus_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// GameServer is the server API for Game service.
+// All implementations must embed UnimplementedGameServer
+// for forward compatibility.
+type GameServer interface {
+	StartMatch(context.Context, *StartMatchRequest) (*StartMatchReply, error)
+	CancelMatch(context.Context, *CancelMatchRequest) (*CancelMatchReply, error)
+	GetMatchStatus(context.Context, *GetMatchStatusRequest) (*GetMatchStatusReply, error)
+	mustEmbedUnimplementedGameServer()
+}
+
+// UnimplementedGameServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedGameServer struct{}
+
+func (UnimplementedGameServer) StartMatch(context.Context, *StartMatchRequest) (*StartMatchReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method StartMatch not implemented")
+}
+func (UnimplementedGameServer) CancelMatch(context.Context, *CancelMatchRequest) (*CancelMatchReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method CancelMatch not implemented")
+}
+func (UnimplementedGameServer) GetMatchStatus(context.Context, *GetMatchStatusRequest) (*GetMatchStatusReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetMatchStatus not implemented")
+}
+func (UnimplementedGameServer) mustEmbedUnimplementedGameServer() {}
+func (UnimplementedGameServer) testEmbeddedByValue()              {}
+
+// UnsafeGameServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to GameServer will
+// result in compilation errors.
+type UnsafeGameServer interface {
+	mustEmbedUnimplementedGameServer()
+}
+
+func RegisterGameServer(s grpc.ServiceRegistrar, srv GameServer) {
+	// If the following call panics, it indicates UnimplementedGameServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Game_ServiceDesc, srv)
+}
+
+func _Game_StartMatch_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(StartMatchRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GameServer).StartMatch(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Game_StartMatch_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GameServer).StartMatch(ctx, req.(*StartMatchRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Game_CancelMatch_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CancelMatchRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GameServer).CancelMatch(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Game_CancelMatch_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GameServer).CancelMatch(ctx, req.(*CancelMatchRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Game_GetMatchStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetMatchStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GameServer).GetMatchStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Game_GetMatchStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GameServer).GetMatchStatus(ctx, req.(*GetMatchStatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Game_ServiceDesc is the grpc.ServiceDesc for Game service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Game_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.game.v1.Game",
+	HandlerType: (*GameServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "StartMatch",
+			Handler:    _Game_StartMatch_Handler,
+		},
+		{
+			MethodName: "CancelMatch",
+			Handler:    _Game_CancelMatch_Handler,
+		},
+		{
+			MethodName: "GetMatchStatus",
+			Handler:    _Game_GetMatchStatus_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/game/v1/game.proto",
+}
