# backend/openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: User API
+    title: Game API
     version: 0.0.1
 paths:
-    /v1/users/login:
+    /v1/game/cancel:
         post:
             tags:
-                - User
-            operationId: User_Login
+                - Game
+            operationId: Game_CancelMatch
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LoginRequest'
+                            $ref: '#/components/schemas/CancelMatchRequest'
                 required: true
             responses:
                 "200":
@@ -23,23 +23,23 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginReply'
+                                $ref: '#/components/schemas/CancelMatchReply'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/users/refresh:
+    /v1/game/start:
         post:
             tags:
-                - User
-            operationId: User_RefreshToken
+                - Game
+            operationId: Game_StartMatch
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RefreshRequest'
+                            $ref: '#/components/schemas/StartMatchRequest'
                 required: true
             responses:
                 "200":
@@ -47,68 +47,20 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/RefreshReply'
+                                $ref: '#/components/schemas/StartMatchReply'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/users/register:
-        post:
-            tags:
-                - User
-            operationId: User_Register
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/RegisterRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/RegisterReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /v1/users/verify:
-        post:
-            tags:
-                - User
-            operationId: User_Verify
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/VerifyRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/VerifyReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /v1/users/{id}:
+    /v1/game/status/{matchid}:
         get:
             tags:
-                - User
-            operationId: User_GetUser
+                - Game
+            operationId: Game_GetMatchStatus
             parameters:
-                - name: id
+                - name: matchid
                   in: path
                   required: true
                   schema:
@@ -119,59 +71,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/UserInfo'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        put:
-            tags:
-                - User
-            operationId: User_UpdateUser
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/UpdateUserRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/UserInfo'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        delete:
-            tags:
-                - User
-            operationId: User_DeleteUser
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/DeleteUserReply'
+                                $ref: '#/components/schemas/GetMatchStatusReply'
                 default:
                     description: Default error response
                     content:
@@ -180,9 +80,19 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        DeleteUserReply:
+        CancelMatchReply:
             type: object
             properties: {}
+        CancelMatchRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+        GetMatchStatusReply:
+            type: object
+            properties:
+                status:
+                    type: string
         GoogleProtobufAny:
             type: object
             properties:
@@ -191,43 +101,15 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        LoginReply:
+        StartMatchReply:
             type: object
             properties:
-                id:
+                matchID:
                     type: string
-                token:
-                    type: string
-        LoginRequest:
-            type: object
-            properties:
-                phone:
-                    type: string
-                password:
-                    type: string
-        RefreshReply:
-            type: object
-            properties:
-                accessToken:
-                    type: string
-                refreshToken:
-                    type: string
-        RefreshRequest:
-            type: object
-            properties:
-                refreshToken:
-                    type: string
-        RegisterReply:
-            type: object
-            properties:
-                id:
-                    type: string
-        RegisterRequest:
+        StartMatchRequest:
             type: object
             properties:
                 name:
-                    type: string
-                password:
                     type: string
         Status:
             type: object
@@ -245,32 +127,5 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        UpdateUserRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-                name:
-                    type: string
-        UserInfo:
-            type: object
-            properties:
-                id:
-                    type: string
-                name:
-                    type: string
-                createdAt:
-                    type: string
-                    format: date-time
-        VerifyReply:
-            type: object
-            properties:
-                valid:
-                    type: boolean
-        VerifyRequest:
-            type: object
-            properties:
-                token:
-                    type: string
 tags:
-    - name: User
+    - name: Game
